--- a/easyfmis/easyfmis.csproj
+++ b/easyfmis/easyfmis.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Entities\DgvSystemTablesTaxListEntity.cs" />
     <Compile Include="Entities\DgvSystemTablesUnitListEntity.cs" />
     <Compile Include="Entities\DgvTrnCollectionSalesInvoiceListEntity.cs" />
+    <Compile Include="Entities\DgvTrnDisbursementReceivingReceiptListEntity.cs" />
     <Compile Include="Entities\DgvTrnInventoryEntriesEntity.cs" />
     <Compile Include="Entities\DgvRepInventoryReportEntity.cs" />
     <Compile Include="Entities\DgvItemListItemEntity.cs" />
@@ -562,6 +563,12 @@
     </Compile>
     <Compile Include="Forms\Software\TrnCollection\TrnCollectionSalesInvoiceListForm.Designer.cs">
       <DependentUpon>TrnCollectionSalesInvoiceListForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Software\TrnDisbursement\TrnDisbursementReceivingReceiptListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnDisbursement\TrnDisbursementReceivingReceiptListForm.Designer.cs">
+      <DependentUpon>TrnDisbursementReceivingReceiptListForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Software\TrnDisbursement\TrnDisbursementListForm.cs">
       <SubType>Form</SubType>
@@ -1011,6 +1018,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnCollection\TrnCollectionSalesInvoiceListForm.resx">
       <DependentUpon>TrnCollectionSalesInvoiceListForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\TrnDisbursement\TrnDisbursementReceivingReceiptListForm.resx">
+      <DependentUpon>TrnDisbursementReceivingReceiptListForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnDisbursement\TrnDisbursementListForm.resx">
       <DependentUpon>TrnDisbursementListForm.cs</DependentUpon>
