--- a/easyfmis/easyfmis.csproj
+++ b/easyfmis/easyfmis.csproj
@@ -402,6 +402,12 @@
     <Compile Include="Forms\Software\RepAccountsReceivableReport\RepAccountReceivableReportSalesInvoiceDetailReportForm.designer.cs">
       <DependentUpon>RepAccountReceivableReportSalesInvoiceDetailReportForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Software\RepAccountsReceivableReport\RepAccountsReceivableStatementOfAccountsPrintPreviewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\RepAccountsReceivableReport\RepAccountsReceivableStatementOfAccountsPrintPreviewForm.Designer.cs">
+      <DependentUpon>RepAccountsReceivableStatementOfAccountsPrintPreviewForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Software\RepAccountsReceivableReport\RepAccountsReceivableStatementOfAccountsReportForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -937,6 +943,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\RepAccountsReceivableReport\RepAccountReceivableReportSalesInvoiceDetailReportForm.resx">
       <DependentUpon>RepAccountReceivableReportSalesInvoiceDetailReportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\RepAccountsReceivableReport\RepAccountsReceivableStatementOfAccountsPrintPreviewForm.resx">
+      <DependentUpon>RepAccountsReceivableStatementOfAccountsPrintPreviewForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\RepAccountsReceivableReport\RepAccountsReceivableStatementOfAccountsReportForm.resx">
       <DependentUpon>RepAccountsReceivableStatementOfAccountsReportForm.cs</DependentUpon>
