--- a/easyfmis/easyfmis.csproj
+++ b/easyfmis/easyfmis.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Entities\DgvSalesInvoiceEntity.cs" />
     <Compile Include="Entities\DgvSalesInvoiceItemEntity.cs" />
     <Compile Include="Entities\DgvSalesInvoiceItemEntitySalesOrderitemEntity.cs" />
+    <Compile Include="Entities\DgvSalesInvoiceSearchSalesOrderEntity.cs" />
     <Compile Include="Entities\DgvSearchPurchaseOrderItemEntity.cs" />
     <Compile Include="Entities\DgvSearchNonInventoryItemEntity.cs" />
     <Compile Include="Entities\DgvDisbursementEntity.cs" />
@@ -690,6 +691,12 @@
     <Compile Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceDetailDiscountForm.designer.cs">
       <DependentUpon>TrnSalesInvoiceDetailDiscountForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceDetailSearchSalesOrderForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceDetailSearchSalesOrderForm.Designer.cs">
+      <DependentUpon>TrnSalesInvoiceDetailSearchSalesOrderForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoicePrintPreference.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1099,6 +1106,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceDetailDiscountForm.resx">
       <DependentUpon>TrnSalesInvoiceDetailDiscountForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceDetailSearchSalesOrderForm.resx">
+      <DependentUpon>TrnSalesInvoiceDetailSearchSalesOrderForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoicePrintPreference.resx">
       <DependentUpon>TrnSalesInvoicePrintPreference.cs</DependentUpon>
